namespace StudentSocialNetwork.Api.Domain.Entities;

public class MessageRead
{
    public long Id { get; set; }
    public long MessageId { get; set; }
    public int UserId { get; set; }
    public DateTime SeenAt { get; set; }

    public Message Message { get; set; } = null!;
    public User User { get; set; } = null!;
}
